# csmotif-RNA

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SHELL_HARDENING.md  genimino.py  genimino_batch.py  platform_utils.py  pyproject.toml  shell_exec.py
.github/workflows/: test.yml
docs/lessons/: FAILED_APPROACHES.md
sim.imino/: genproj.py  mkucsf.py  mkucsf_gpu.py
tests/: conftest.py  test_bctab.py  test_gpu_simulation.py  test_integration.py  test_motif.py
tools/: base.py  bctab.py  fraMotif.py
tools/ci/: shell_hazards_baseline.txt  shell_hygiene_gate.sh  shell_hygiene_gate_hardmode.sh
